se an realizaco cambios

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body {
   align-items: center;
   background: hsl(235, 18%, 26%);
   font-family: "roboto", sans-serif;
+  color: hsl(243.53, 9.6%, 34.71%);
 }
 @media screen and (max-width: 375px) {
   body {
@@ -88,7 +89,7 @@ body {
   display: flex;
   height: 400px;
   width: 600px;
-  padding: 15px;
+  padding: 10px 20px 10px 25px;
   background: white;
   border-radius: 20px;
 }
@@ -102,7 +103,6 @@ body {
 }
 .main-container .left-container {
   flex: 1;
-  margin-left: 25px;
 }
 @media screen and (max-width: 375px) {
   .main-container .left-container {
@@ -113,6 +113,7 @@ body {
 .main-container .left-container h1 {
   margin-top: 30px;
   font-size: 40px;
+  color: black;
 }
 @media screen and (max-width: 375px) {
   .main-container .left-container h1 {
@@ -160,9 +161,9 @@ body {
   gap: 90px;
 }
 .main-container .left-container .Email-container .email-and-error .tittle-email {
-  font-size: 12px;
+  font-size: 9px;
   margin-bottom: 3px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .main-container .left-container .Email-container .email-and-error .error {
   display: none;
@@ -180,10 +181,13 @@ body {
   display: flex;
 }
 .main-container .left-container .Email-container .input-email {
+  height: 35px;
   width: 240px;
   padding: 10px;
+  font-size: 10px;
   border-radius: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  border: 1px solid darkgrey;
 }
 @media screen and (max-width: 375px) {
   .main-container .left-container .Email-container .input-email {
@@ -194,7 +198,7 @@ body {
 .main-container .left-container .Email-container .subscribe-month {
   color: white;
   width: 240px;
-  height: 35px;
+  height: 40px;
   border: none;
   font-size: 11px;
   border-radius: 5px;
