--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ body {
 .main-container .left-container h1 {
   margin-top: 30px;
   font-size: 40px;
-  color: black;
+  color: #242742;
 }
 @media screen and (max-width: 375px) {
   .main-container .left-container h1 {
@@ -164,6 +164,7 @@ body {
   font-size: 9px;
   margin-bottom: 3px;
   margin-top: 20px;
+  font-weight: 700;
 }
 .main-container .left-container .Email-container .email-and-error .error {
   display: none;
