--- a/index.scss
+++ b/index.scss
@@ -111,7 +111,7 @@ body{
         h1{
             margin-top: 30px;
             font-size: 40px;
-            color: black;
+            color: #242742;
 
             @media screen and (max-width: 375px){
                 margin-top: -10px;       
@@ -166,6 +166,7 @@ body{
                     font-size: 9px;
                     margin-bottom: 3px;
                     margin-top: 20px;
+                    font-weight: 700;
                 }
 
                 .error{
