--- a/index.scss
+++ b/index.scss
@@ -105,7 +105,7 @@ body{
 
         @media screen and (max-width: 375px){
             margin-top: -100px;
-            padding: -1px 14px 24px 10px;
+            margin-left: 20px;
         }
 
         h1{
@@ -160,6 +160,7 @@ body{
 
             .email-and-error{
                 display: flex;
+                width: 100%;
                 gap: 90px;
 
                 .tittle-email{
@@ -167,11 +168,16 @@ body{
                     margin-bottom: 3px;
                     margin-top: 20px;
                     font-weight: 700;
+
+                    @media screen and (max-width: 375px){
+                        font-size: 11px;
+                    }
                 }
 
                 .error{
                     display: none;
-                    margin-top: 10px;
+                    margin-top: 20px;
+                    margin-left: 30px;
                     font-size: 9px;
                     color: red;
 
