--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ body {
     width: 300px;
     height: 50px;
     margin: 0px;
+    font-size: 14px;
   }
 }
 .segundary-container .dismiss-message:hover {
@@ -207,6 +208,7 @@ body {
   .main-container .left-container .Email-container .input-email {
     width: 300px;
     height: 50px;
+    font-size: 16px;
   }
 }
 .main-container .left-container .Email-container .subscribe-month {
@@ -222,6 +224,7 @@ body {
   .main-container .left-container .Email-container .subscribe-month {
     width: 300px;
     height: 50px;
+    font-size: 14px;
   }
 }
 .main-container .left-container .Email-container .subscribe-month:hover {
