--- a/index.scss
+++ b/index.scss
@@ -74,6 +74,7 @@ body{
             width: 300px;
             height: 50px;
             margin: 0px;
+            font-size: 14px;
         }
     }
 
@@ -209,6 +210,7 @@ body{
                 @media screen and (max-width: 375px){
                     width: 300px;
                     height: 50px;
+                    font-size: 16px;
                 }
             }
 
@@ -224,6 +226,7 @@ body{
                 @media screen and (max-width: 375px){
                   width: 300px;  
                   height: 50px;
+                  font-size: 14px;
                 }
             }
 
